Aadhi: Fixing alignment issue in bottom of all the screen

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -114,4 +114,5 @@ footer {
 
 body { 
   padding-top: 80px; 
+  padding-bottom: 80px;
 }
